--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "nl.birdly.crossfadedemo"
+        applicationId "nl.birdly.morph"
         minSdk 22
         targetSdk 30
         versionCode 1
