--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nl.birdly.crossfadedemo"
+    package="nl.birdly.morph"
     >
 
     <application
@@ -13,7 +13,7 @@
         >
 
         <activity
-            android:name=".MainActivity"
+            android:name="nl.birdly.crossfadedemo.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
             <intent-filter>
