--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,16 @@ buildscript {
     ext.kotlin_version = '1.5.21'
     ext.compose_version = '1.0.1'
     ext.coroutines_version = '1.4.2'
+    ext.library_version = '1.0'
 
     repositories {
         google()
         mavenCentral()
     }
 
-
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
