--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         >
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.github.mennovogel.example.MainActivity"
             android:label="@string/app_name"
             android:exported="true"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
